--- a/header.css
+++ b/header.css
@@ -62,7 +62,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #86eeec;
+  background: #a2ffff;
 }
 
 .logo {
