--- a/assets/css/tournament-detail.css
+++ b/assets/css/tournament-detail.css
@@ -174,7 +174,7 @@ header {
   background: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
-  width: 250px;
+  width: 200px;
   display: none;
 }
 .dropdown-menu.active {
@@ -211,236 +211,305 @@ header {
   margin-left: auto;
 }
 
-/*================= Banner =================*/
-.slider {
-  padding-bottom: 20px;
-  border-bottom: 5px solid #60b004;
+/*================= tournaments =================*/
+.tournament {
+  padding-top: 60px;
+}
+.tournament-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 
-/*================= News-category =================*/
-.news-detail {
-  margin-top: 53px;
+.tour-detail {
+  width: 900px;
+}
+
+.tour-detail h1 {
+  font-weight: 600;
+  font-size: 3.4rem;
+  line-height: 43.57px;
+  letter-spacing: 0%;
+}
+.event-container {
+  border-left: 2px solid #d6d6d6;
+  padding: 20px 0 0 20px;
+}
+/*================= eventDetails =================*/
+
+#eventDetails .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  background: white;
+  padding: 30px 20px;
+  padding-right: 0;
+  border-radius: 8px;
+}
+#eventDetails .item {
+  width: 400px;
+  height: 50px;
+  background: #f0f0f0;
+  padding: 10px 20px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#eventDetails .item span {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 19.36px;
+  letter-spacing: 0%;
+}
+#eventDetails .btn-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+#eventDetails .btn {
+  padding: 5px 10px;
+  border: 1px solid blue;
+  border-radius: 5px;
+  color: blue;
+  cursor: pointer;
+}
+#eventDetails .btn:hover {
+  background: blue;
+  color: white;
+}
+#eventDetails .link {
+  color: blue;
+  text-decoration: none;
+}
+#eventDetails .link:hover {
+  text-decoration: underline;
+}
+/*================= eventContent =================*/
+#eventContent {
+  margin-top: 30px;
   margin-bottom: 100px;
 }
 
-.news-detail .main-content {
+#eventContent h2 {
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 43.57px;
+  letter-spacing: 0%;
+  margin-bottom: 25px;
+}
+
+#eventContent p {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 19.36px;
+  letter-spacing: 0%;
+  text-align: justify;
+  width: 870px;
+}
+/*================= news-container__horizontal =================*/
+.news-container__horizontal {
+  margin-bottom: 80px;
+}
+.news-title__horizontal {
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 43.57px;
+  letter-spacing: 0%;
+}
+.news-header__horizontal {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
-  padding: 0 15px 0;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.news-list__horizontal {
+  display: flex;
+  gap: 15px;
+  justify-content: space-between;
+}
+.news-item__horizontal {
+  width: 270px;
+  background: #f9f9f9;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.news-item__horizontal img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+.news-item__horizontal p {
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 23.03px;
+  letter-spacing: 0%;
+  padding: 10px;
+}
+.more-link__horizontal {
+  display: block;
+  text-align: right;
+  margin-top: 10px;
+  color: blue;
+  text-decoration: none;
+}
+/*================= news-container =================*/
+.news-container {
+  width: 400px;
+  border: 1px solid #918b8b;
+  border-radius: 20px;
+}
+.news-header {
+  padding: 40px;
+  border-bottom: 1px solid #918b8b;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.news-header h2 {
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 34.55px;
+  letter-spacing: 0%;
+}
+
+.news-header a {
+  font-weight: 300;
+  font-style: italic;
+  font-size: 1.4rem;
+  line-height: 20px;
+  letter-spacing: 0%;
+  color: #0593ff;
+}
+
+.news-header a:hover {
+  color: #60b004;
 }
 
 .news-block {
-  width: 850px;
+  padding: 40px;
 }
 
-#backBtn {
-  border: none;
-  background: white;
-  font-weight: 200;
-  font-style: italic;
-  font-size: 1.6rem;
-  line-height: 19.36px;
-  color: #60b004;
-  pointer-events: pointer;
-  padding: 10px;
+.featured-news {
+  border: 1px solid #dfdada;
+  border-radius: 10px;
+  margin-bottom: 34px;
 }
 
-#news-title {
-  margin-top: 30px;
-  font-weight: 500;
-  font-size: 2.4rem;
-  line-height: 29.05px;
-  letter-spacing: 0%;
-  margin-bottom: 14px;
-}
-
-#news-date {
-  font-weight: 200;
-  font-style: italic;
-  font-size: 1.6rem;
-  line-height: 19.36px;
-  letter-spacing: 0%;
-  margin-bottom: 14px;
-}
-
-#news-image {
+.featured-news img {
   width: 100%;
-  margin-bottom: 17px;
 }
 
-#news-content {
+.featured-news p {
+  padding: 10px;
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 20px;
   letter-spacing: 0%;
-  text-align: justify;
 }
 
-/*================= tournaments =================*/
-
-.buttons {
+.news-list {
   display: flex;
-  justify-content: flex-start;
-  gap: 20px;
-  margin-bottom: 20px;
-  margin-top: 30px;
-}
-.btn {
-  padding: 7px 5px;
-  border: none;
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 1.6rem;
-  border-radius: 4px;
-  min-width: 120px;
-  cursor: pointer;
-  border: 1px solid #e4e4e4;
-}
-.save {
-  background: white;
-  color: #a3a3a3;
-}
-.suggest {
-  background: white;
-  color: #78b43d;
+  flex-direction: column;
+  gap: 30px;
 }
 
-.suggest:hover {
-  background: #78b43d;
-  color: white;
-}
-
-.tournaments {
+.news-item a {
   display: flex;
   justify-content: center;
-  gap: 15px;
-  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: 20px;
 }
 
-.tournament-block h2 {
-  font-weight: 500;
-  font-size: 2rem;
-  line-height: 24.2px;
+.news-item img {
+  width: 120px;
+}
+/*================= slider =================*/
+.explore-container {
+  margin-left: 20px;
+  margin-bottom: 60px;
+}
+
+.explore-container h2 {
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 43.57px;
   letter-spacing: 0%;
-  text-align: center;
-  margin-bottom: 20px;
 }
 
-.tournament {
-  border: 2px solid lightgray;
-  border-radius: 30px;
-  padding: 15px;
-  width: 150px;
+.slider-wrapper {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
-  flex-direction: column;
-  text-align: center;
-  box-shadow: 2px 2px 5px rgba(0.2, 0.2, 0.2, 0.2);
+  gap: 10px;
+  margin-top: 40px;
+  margin-left: 40px;
 }
 
-.tournament h3 {
-  font-weight: 700;
-  font-size: 1.5rem;
+.slider-container {
+  width: 900px;
+  overflow: hidden;
+  position: relative;
+}
+
+.slider {
+  display: flex;
+  gap: 10px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.tournament-card {
+  flex: 0 10 calc(100% / 5);
+  padding: 15px 10px;
+  border: 1px solid #ddd;
+  text-align: center;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.tournament-card h3 {
+  font-weight: 600;
+  font-size: 1.6rem;
+  margin: 10px 0;
   line-height: 18.15px;
   letter-spacing: 0%;
   text-align: center;
 }
 
-.tournament p {
+.tournament-card p {
   font-weight: 400;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   line-height: 14.52px;
   letter-spacing: 0%;
   text-align: center;
   color: #b4b2b2;
-  margin-top: 5px;
-  margin-bottom: 4px;
+  padding: 0px 10px;
 }
-.tournament-img {
+
+.tournament-card img {
   width: 90px;
-}
-/*================= ppopup =================*/
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  display: none;
-  justify-content: center;
-  align-items: center;
-}
-.popup {
-  background: white;
-  padding: 20px 40px;
-  border-radius: 10px;
-  width: 50%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-.popup h3 {
-  font-weight: 500;
-  font-size: 2.4rem;
-  line-height: 20px;
-  letter-spacing: 0%;
-  text-align: center;
-  margin-bottom: 40px;
-}
-
-.popup label {
-  font-weight: 600;
-  font-size: 2rem;
-  line-height: 24.2px;
-  letter-spacing: 0%;
-}
-.popup textarea {
-  width: 100%;
-  height: 150px;
-  margin-top: 10px;
-  padding: 10px;
+  object-fit: cover;
   border-radius: 5px;
-  border: 1px solid gray;
-  background: white;
-  margin-bottom: 20px;
 }
-.popup-buttons {
-  margin-top: 10px;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-bottom: 30px;
-}
-.cancel {
-  background: #e7e3e3;
-  color: #006a96;
-  font-weight: 600;
-  padding: 10px 15px;
-  border: none;
-  cursor: pointer;
-}
-.cancel:hover {
-  background: #e7e3e3;
-  color: white;
-}
-.submit {
-  background: limegreen;
-  font-weight: 600;
-  padding: 10px 15px;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-.popup p small {
-  font-weight: 300;
-  font-size: 1.6rem;
-  line-height: 19.36px;
-  letter-spacing: 0%;
-  color: #b4b2b2;
-}
-/*================= Ads =================*/
 
+.slider-btn {
+  padding: 5px 11px;
+  font-size: 20px;
+  cursor: pointer;
+  border: none;
+  background: white;
+  color: #1c91d0;
+  border: 1px solid #1c91d0;
+  border-radius: 50%;
+}
+
+.slider-btn:hover {
+  background: #1c91d0;
+  color: white;
+  border: 1px solid white;
+}
+/*================= ads =================*/
 .ads-hori {
   display: flex;
   justify-content: center;
@@ -449,20 +518,6 @@ header {
 
 .ads-hori img {
   width: 680px;
-  align-items: center;
-}
-
-.ads-content {
-  width: 391px;
-  background-color: #d9ffc5;
-  height: 1400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.ads {
-  width: 391px;
   align-items: center;
 }
 
@@ -639,48 +694,7 @@ header {
   letter-spacing: 0%;
   color: white;
 }
-/*================= login-popup =================*/
-#login-popup {
-  z-index: 9999;
-  position: absolute;
-}
-.login-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
+
+#eventBackground img {
   width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  display: none;
-  justify-content: center;
-  align-items: center;
-}
-.login-popup {
-  background: #d1cccc;
-  padding: 80px 120px;
-  border-radius: 10px;
-  text-align: center;
-  min-width: 300px;
-}
-.login-title {
-  font-weight: 600;
-  font-size: 2rem;
-  line-height: 50px;
-  letter-spacing: 0%;
-}
-.login-options {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-top: 30px;
-}
-.login-options button {
-  border-radius: 5px;
-  padding: 15px;
-  border: 1px solid #000;
-  background: white;
-  cursor: pointer;
-  font-weight: 300;
-  font-size: 1.6rem;
-  letter-spacing: 0%;
 }
