--- a/assets/css/account-detail.css
+++ b/assets/css/account-detail.css
@@ -62,6 +62,11 @@ header {
   justify-content: space-between;
   align-items: center;
   background: #a2ffff;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .logo {
